--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,8 @@
   "files.associations": {
     "ostream": "cpp",
     "print": "cpp",
-    "iostream": "cpp"
+    "iostream": "cpp",
+    "queue": "cpp",
+    "stack": "cpp"
   }
 }
